@@ -25,31 +25,36 @@
   background-color: transparent;
 }
 
-.bg-black {
+.bg-black,
+.bg-black\:hover:hover,
+.anchor:hover .bg-black\:hover {
   --bg-hue: var(--black-hue);
   --bg-sat: var(--black-sat);
   --bg-lum: var(--black-lum);
+  --bg-alpha: 100%;
   --bg-color: var(--black, hsla(var(--bg-hue) var(--bg-sat) var(--bg-lum) / var(--bg-alpha)));
+  background-color: var(--bg-color);
 }
 
-.bg-white {
+.bg-white,
+.bg-white\:hover:hover,
+.anchor:hover .bg-white\:hover {
   --bg-hue: var(--white-hue);
   --bg-sat: var(--white-sat);
   --bg-lum: var(--white-lum);
+  --bg-alpha: 100%;
   --bg-color: var(--white, hsla(var(--bg-hue) var(--bg-sat) var(--bg-lum) / var(--bg-alpha)));
+  background-color: var(--bg-color);
 }
 
-.bg-gray {
+.bg-gray,
+.bg-gray\:hover:hover,
+.anchor:hover .bg-gray\:hover {
   --bg-hue: var(--gray-hue);
   --bg-sat: var(--gray-sat);
   --bg-lum: var(--gray-lum);
-  --bg-color: var(--gray, hsla(var(--bg-hue) var(--bg-sat) var(--bg-lum) / var(--bg-alpha)));
-}
-
-.bg-black,
-.bg-white,
-.bg-gray {
   --bg-alpha: 100%;
+  --bg-color: var(--gray, hsla(var(--bg-hue) var(--bg-sat) var(--bg-lum) / var(--bg-alpha)));
   background-color: var(--bg-color);
 }
 
