@@ -1,6 +1,7 @@
 # 0.XX.X (2020-06-07)
 
   * (color, bg) add sat, lum classes by 5
+  * (color, bg) white, black, gray hover states
 
 # 0.17.0 (2020-06-07)
 
